--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -127,6 +127,18 @@
             </ul>
             </li>
             <li>
+                <a href="#accountsSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Accounts</a>
+                <ul class="collapse list-unstyled" id="accountsSubmenu">
+                    <li>
+                        <a href="/accounts">Accounts</a>
+                    </li>
+                    <li>
+                        <a href="/accounts/fixedcost">Fixed Cost</a>
+                    </li>
+            </ul>
+            </li>
+            
+            <li>
                 <a target="_blank" href="/hiddenregister">Register</a>
             </li>
                 
