--- a/views/accounts/index.ejs
+++ b/views/accounts/index.ejs
@@ -1,7 +1,7 @@
 <%- include("../partials/header") %>
 <div class="col-sm-10">
 <% var total= cost[0].earning-costing %>
-<table class="table table-dark col-sm-9">
+<table class="table table-striped col-sm-9">
     <th>Earning</th>
     <th>Costing</th>
     <th>Profit</th>
@@ -11,8 +11,8 @@
         <td><%= total %></td>
     </tr>
 </table>
-<br>
-<table class="table table-dark col-sm-9">
+<hr>
+<table class="table table-striped col-sm-9">
     <th>P/D Required In INR</th>
     <th>P/D Required In USD</th>
     <tr>
@@ -21,7 +21,7 @@
         <td><%= Math.round(ting/76) %></td>
     </tr>
 </table>
-
+<hr>
 </div>
 
 
