--- a/views/accounts/transactions.ejs
+++ b/views/accounts/transactions.ejs
@@ -1,9 +1,9 @@
 <%- include("../partials/header") %>
-<div class="col-sm-10">
-    <div class="container">
+<div class="col-lg-10 col-md-12">
+    
         <h4>Input Transaction</h4>
     <form action="/accounts/transactions" method="POST">
-    <div class="col-sm-12">
+
     <table class="table">
         <tr>
             <th>Event</th>
@@ -11,6 +11,7 @@
             <th>CR/DB</th>
             <th>Currency</th>
             <th>Account</th>
+            <th>Sent By/To</th>
             <th>Notes</th>
         </tr>
         <tr>
@@ -58,6 +59,16 @@
         </select>
     </td>
     <td>
+        <select name="sent" >
+            <option>Direct</option>
+            <option>Exirv</option>
+            <option>IJP</option>
+            <option>Techlab</option>
+            <option>Suyash</option>
+            <option>Kushagra</option>
+        </select>
+    </td>
+    <td>
         <input type="text" name="notes" class="amput" required>
     </td>
 </tr>
@@ -67,7 +78,7 @@
     </td>
 </tr>
 </table>
-    </div>
+    
     </form>
     <table class="table table-striped">
         <tr>
@@ -77,6 +88,7 @@
             <th>Type</th>
             <th>Account</th>
             <th>Notes</th>
+            <th>Changes</th>
         </tr>
 <% transa.reverse().forEach(function(apple){ %>
 
@@ -100,6 +112,15 @@
             <%= apple.notes %>
         </td>
 
+        <td>
+            <div class="inline-item">
+            <a href="/accounts/edit/<%=apple._id%>"><button class="btn btn-info edit">EDIT</button></a>
+            <form class="form-inline" action="/accounts/delete/<%=apple._id%>?_method=DELETE" method="POST">
+            <button class="btn btn-danger">DELETE</button>
+        </form>
+        </div>
+        </td>
+
     </tr>
 
 <% }) %>
@@ -111,7 +132,7 @@
         <% var monin=0; %>
         <% var monout=0; %>
         <% var total=0; %>
-        <% transa.forEach(function(apple){ %>
+        <% transa.reverse().forEach(function(apple){ %>
             <% if(apple.transtype === "Credit"){ %>
             <% monin += apple.amount %>
             <% } else { %>
@@ -125,5 +146,8 @@
 </table>
 </div>
 </div>
-<script src="/js/input.js"></script>
+</div>
+<script src="/js/input.js">
+</script>
+
 <%- include("../partials/footer") %></input>
