--- a/views/admin/gensalary.ejs
+++ b/views/admin/gensalary.ejs
@@ -73,7 +73,7 @@
         <th>Username</th>
         <th>Reason</th>
         <th>Overtime Hours</th>
-        <% attrea.forEach(function(attr){ %>
+        <% attrea.reverse().forEach(function(attr){ %>
         <tr>
             <td><%= attr.date %></td>
             <td><%= attr.username %></td>
