--- a/views/accounts/profitandloss.ejs
+++ b/views/accounts/profitandloss.ejs
@@ -1,6 +1,6 @@
 <%- include("../partials/header") %>
-<div class="col-sm-10">
-    <div class="container">    
+<div class="col-sm-12 col-md-12 col-lg-10">
+   
     <h4 class="heem">Select Month For Transactions</h4>
     <form action="/accounts/bymonth" method="POST">
         <select name="month" class="userwork">
@@ -47,5 +47,6 @@
         <button class="btn btn-success">Submit</button>
     </form>
     </div>
+</div>
 </div>
 <%- include("../partials/footer") %>
