Added flash messages and middleware and fixed accounts

--- a/views/accounts/transactions.ejs
+++ b/views/accounts/transactions.ejs
@@ -1,5 +1,5 @@
 <%- include("../partials/header") %>
-<div class="col-lg-10 col-md-12">
+<div class="col-lg-9 col-md-12">
     
         <h4>Input Transaction</h4>
     <form action="/accounts/transactions" method="POST">
@@ -54,6 +54,8 @@
             <option>Exirv</option>
             <option>IJP</option>
             <option>Techlab</option>
+            <option>Acqkuire</option>
+            <option>Cynapsos</option>
             <option>Suyash</option>
             <option>Kushagra</option>
         </select>
