--- a/views/accounts/edit.ejs
+++ b/views/accounts/edit.ejs
@@ -1,21 +1,21 @@
 <%- include("../partials/header") %>
-<div class="col-sm-10">
-    <div class="container">
+<div class="col-sm-9">
+    
         <h4>Input Transaction</h4>
     <form action="/accounts/edit/<%=id%>?_method=PUT" method="POST">
-    <div class="col-sm-12">
+    
     <table class="table">
         <tr>
             <th>Event</th>
             <th>Amount</th>
             <th>CR/DB</th>
-            <th>Currency</th>
             <th>Account</th>
             <th>Notes</th>
         </tr>
         <tr>
             <td>
     <select id = "event" name = "event"  onchange = "if ($('#event').val() == 'Others') { $('#haad').show(); } else { $('#haad').hide(); }">
+        <option selected><%= transa.event %></option>
         <option>Income</option>
         <option>Withdrawal</option>
         <option>Charge</option>
@@ -25,6 +25,7 @@
         <option>Fkref</option>
         <option>Electricity</option>
         <option>Tea</option>
+        <option>ANNR</option>
         <option>Traffic</option>
         <option>Hosting</option>
         <option>Domains</option>
@@ -38,21 +39,19 @@
     </td>
     <td>
         <select name="type" >
+            <option selected><%= transa.transtype %></option>
             <option>Debit</option>
             <option>Credit</option>
         </select>
     </td>
     <td>
-        <select name="currency" >
-            <option>INR</option>
-            <option>USD</option>
-        </select>
-    </td>
-    <td>
         <select name="account" >
+            <option selected><%= transa.account %></option>
             <option>Exirv</option>
             <option>IJP</option>
             <option>Techlab</option>
+            <option>Acqkuire</option>
+            <option>Cynapsos</option>
             <option>Suyash</option>
             <option>Kushagra</option>
         </select>
