--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -50,6 +50,15 @@
           <% } %>
         </div>
       </nav>
+      <% if(error && error.length > 0){%>
+      <div class="container alert alert-danger" role="alert">
+       <%= error%>
+      </div>
+       <% } if(success && success.length > 0) { %>
+      <div class="container alert alert-success" role="alert">
+        <%= success %>
+       </div>
+    <% } %>
       
       <% if(currentUser && currentUser.username === "krates"){ %>  
       <div class="row">
