fixed ipdata & added time difference

--- a/views/admin/dataleft.ejs
+++ b/views/admin/dataleft.ejs
@@ -138,6 +138,12 @@
                 <td>Washington</td>
                 <td><%= stes[19] %></td>
             </tr>
+            <% if(stes[20]<2000) {%>
+                <tr class="table-danger">
+                <% } else {%> <tr> <% } %>
+                <td>New York</td>
+                <td><%= stes[20] %></td>
+            </tr>
         </table>
     </div>
 
