--- a/views/accounts/transactions.ejs
+++ b/views/accounts/transactions.ejs
@@ -35,7 +35,7 @@
     <input type="text" name="other" class="amput" id="haad">
 </td>
     <td>
-        <input type="number" name="amount" class="amount" required>
+        <input type="number" placeholder="1.0" step="0.01" min="0" max="5000000" name="amount" class="amount" required>
     </td>
     <td>
         <select name="type" >
