fixed transaction bits

--- a/views/accounts/transactions.ejs
+++ b/views/accounts/transactions.ejs
@@ -66,6 +66,8 @@
             <option>Exirv</option>
             <option>IJP</option>
             <option>Techlab</option>
+            <option>Acqkuire</option>
+            <option>Cynapsos</option>
             <option>Suyash</option>
             <option>Kushagra</option>
         </select>
@@ -142,7 +144,7 @@
             <% } %>
         <% }) %>
         <% total = monin-monout %>
-        <%= total %>
+        <%= total.toFixed(2) %>
     </td>
 </tr>
 </table>
