--- a/views/accounts/profitandloss.ejs
+++ b/views/accounts/profitandloss.ejs
@@ -43,6 +43,8 @@
             <option value="IJP">IJP</option>
             <option value="Techlab">Techlab</option>
             <option value="Exirv">Exirv</option>
+            <option value="Ackquire">Acqkuire</option>
+            <option value="Cynapsos">Cynapsos</option>
         </select>
         <button class="btn btn-success">Submit</button>
     </form>
