--- a/views/data/show.ejs
+++ b/views/data/show.ejs
@@ -85,8 +85,13 @@
                     <input class="form-control" type="text" value="<%= emails.password %>" onclick="myFunction(16)"  readonly>
                     </div>
                     </div>
-                <hr>
                 </form>
+                    <div class="row" id="fetchdata">
+                <form target="_blank" action="/data/email/<%= tmails._id %>" method="POST">
+                <button class="btn btn-info btn-lg btn-block fetch">Get New Email</button>    
+                </form>
+                <hr>
+
                 <div class="row" id="fetchdata">
                 <form action="/data/<%= usadata._id %>?_method=DELETE" method="POST">
                 <button class="btn btn-primary btn-lg btn-block fetch">Fetch New Data</button>    
