--- a/views/admin/offers.ejs
+++ b/views/admin/offers.ejs
@@ -32,6 +32,31 @@
         </div>
         
     <% } %>
+    // Adding New Form
+
+    
+
+    <div class="form-group row">
+        <label class="col-sm-1 col-form-label"><strong><%= offurl2[i].offername %></strong></label>
+        <form action="/admin/offers/<%=offurl2[i]._id%>/?_method=DELETE" method="POST">
+        <div class="col-sm-8">
+            <div class="input-group input2">                
+            <input class="form-control formoffers" type="text" value="<%= offurl2[i].offerurl %>" readonly>
+            <div class="input-group-append">
+                <button class="btn btn-danger">Delete</button>
+                </form>              
+              </div>
+            </div> 
+        </div>
+        <div class="col-sm-2">
+            <form action="/admin/offers/<%=offurl2[i]._id%>/?_method=PUT" method="POST">
+                <input type="number" min="1" max="10" name="pri" value="<%= offurl2[i].priority %>">
+                <button class="btn btn-info">SET</button>
+            </form>
+        </div>
+    </div>
+
+    // Ending New Form
     <hr>
     <form action="/admin/offers" method="POST">
         <fieldset>
