--- a/views/admin/deleteips.ejs
+++ b/views/admin/deleteips.ejs
@@ -51,6 +51,7 @@
                 <option value="12">December</option>
                 </select><select class="userwork" name="year">
                 <option value="2021">2021</option>
+                <option value="2021">2022</option>
                 </select>
                 <button class="btn btn-primary" value="search">Submit</button>
             </form>
