--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,18 +14,18 @@
           <form action="/data" method="POST">
           <button class="btn btn-warning btn-lg btn-pad">Continue</button>
           </form>
-      </div>
+      
 
-      <% if(currentUser.dsl !== null || currentUser.length() !== 0) { %>
+      <% if(currentUser.dsl.length != 0) { %>
 
         <div class="col-sm">
-           
-                <form action="changeip/changeip.ejs">
+               
+                <form action="changeip">
                     <button class="btn btn-danger btn-lg btn-pad">Change Location</button>  
                 </form>
             </a>
         </div>
-
+    </div>
     <% } %>
     
     <% } %>
