--- a/views/changeip/index.ejs
+++ b/views/changeip/index.ejs
@@ -2,6 +2,7 @@
 
 <div class="container">
     <div class="toprow">
+        <table class="table">
         <tr>
             <th>Region Code</th>
             <th>Region Name</th>
@@ -12,6 +13,7 @@
             <td><%= xac %></td>
             <td><%= xar %></td>
         </tr>
+        </table>
         <h3><%= xax %></h3>
         <a href="changeip/location">
             <button class="btn btn-danger btn-lg btn-pad">Change Location</button>  
