--- a/views/changeip/location.ejs
+++ b/views/changeip/location.ejs
@@ -3,7 +3,8 @@
 <div class="container">
     <div class="toprow">
         
-        <h3><%= xar %></h3>
+        <h3><%= xar %></h3><br><br>
+        <button class="btn btn-info" onclick="window.history.back()">Check IP</button>
     </div>
 </div>
 
