--- a/views/admin/dataleft.ejs
+++ b/views/admin/dataleft.ejs
@@ -150,11 +150,47 @@
                 <td>Minnesota</td>
                 <td><%= stes[21] %></td>
             </tr>
-            <% if(stes[20]<2000) {%>
+            <% if(stes[22]<2000) {%>
                 <tr class="table-danger">
                 <% } else {%> <tr> <% } %>
                 <td>Alabama</td>
                 <td><%= stes[22] %></td>
+            </tr>
+            <% if(stes[23]<2000) {%>
+                <tr class="table-danger">
+                <% } else {%> <tr> <% } %>
+                <td>Oregon</td>
+                <td><%= stes[23] %></td>
+            </tr>
+            <% if(stes[24]<2000) {%>
+                <tr class="table-danger">
+                <% } else {%> <tr> <% } %>
+                <td>Pennsylvania</td>
+                <td><%= stes[24] %></td>
+            </tr>
+            <% if(stes[25]<2000) {%>
+                <tr class="table-danger">
+                <% } else {%> <tr> <% } %>
+                <td>Ohio</td>
+                <td><%= stes[25] %></td>
+            </tr>
+            <% if(stes[26]<2000) {%>
+                <tr class="table-danger">
+                <% } else {%> <tr> <% } %>
+                <td>Tennessee</td>
+                <td><%= stes[26] %></td>
+            </tr>
+            <% if(stes[27]<2000) {%>
+                <tr class="table-danger">
+                <% } else {%> <tr> <% } %>
+                <td>North Carolina</td>
+                <td><%= stes[27] %></td>
+            </tr>
+            <% if(stes[28]<2000) {%>
+                <tr class="table-danger">
+                <% } else {%> <tr> <% } %>
+                <td>Arkansas</td>
+                <td><%= stes[28] %></td>
             </tr>
         </table>
     </div>
