--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,7 +16,7 @@
           </form>
       
 
-      <% if(currentUser.dsl.length != 0) { %>
+      <% if(currentUser.dsl) { %>
 
         <div class="col-sm">
                
