--- a/views/register.ejs
+++ b/views/register.ejs
@@ -18,7 +18,8 @@
             
             <form action="/hiddenregister" method="POST">
                 <input class="form-control auth" type="text" name="username" placeholder="Username">
-                <input class="form-control auth" type="password" name="password" placeholder="password">
+                <input class="form-control auth" type="password" name="password" placeholder=Password">
+
                 <button class="btn btn-primary">Sign Up</button>
             </form>
             </div>    
