pushing new emails

--- a/views/data/show.ejs
+++ b/views/data/show.ejs
@@ -73,6 +73,7 @@
                     </div>
                         </div>
                 <hr>
+                <% if(counte[0].count % 2 === 0){%>
                 <div class="form-group row form1">
                 <label class="col-sm-3 col-form-label">Email:</label>
                 <div class="col-sm-9">
@@ -86,18 +87,18 @@
                     </div>
                     </div>
                 </form>
-                    <div class="row" id="fetchdata">
+                    <!-- <div class="row" id="fetchdata">
                 <form target="_blank" action="/data/email/<%= tmails._id %>" method="POST">
                 <button class="btn btn-info btn-lg btn-block fetch">Get New Email</button>    
-                </form>
+                </form> -->
                 <hr>
-
+                <% } %>   
                 <div class="row" id="fetchdata">
-                <form action="/data/<%= usadata._id %>?_method=DELETE" method="POST">
+                <form action="/logout" method="GET">
                 <button class="btn btn-primary btn-lg btn-block fetch">Fetch New Data</button>    
                 </form>
                 </div>
                 
-            </div> 
+            <!-- </div>  -->
         <script src="/js/copy.js"></script>
         <%- include("../partials/footer") %>
