--- a/views/data/show.ejs
+++ b/views/data/show.ejs
@@ -73,24 +73,12 @@
                     </div>
                         </div>
                 <hr>
+            </form>
                 <% if(counte[0].count % 2 === 0){%>
-                <div class="form-group row form1">
-                <label class="col-sm-3 col-form-label">Email:</label>
-                <div class="col-sm-9">
-                    <input class="form-control" type="text" value="<%= emails.email %>" onclick="myFunction(15)"  readonly>
-                </div>
-                </div>
-                <div class="form-group row form1">
-                    <label class="col-sm-3 col-form-label">Password:</label>
-                    <div class="col-sm-9">
-                    <input class="form-control" type="text" value="<%= emails.password %>" onclick="myFunction(16)"  readonly>
-                    </div>
-                    </div>
-                </form>
-                    <!-- <div class="row" id="fetchdata">
+                    <div class="row" id="fetchdata">
                 <form target="_blank" action="/data/email/<%= tmails._id %>" method="POST">
                 <button class="btn btn-info btn-lg btn-block fetch">Get New Email</button>    
-                </form> -->
+                </form>
                 <hr>
                 <% } %>   
                 <div class="row" id="fetchdata">
